Fix window overflow

--- a/bezier-curves/style.css
+++ b/bezier-curves/style.css
@@ -5,24 +5,26 @@ html, body {
     padding: 0;
     font-family: Arial;
     word-break: normal;
+    overflow: hidden;
 }
 
 #container {
     width: 100%;
     height: 100%;
     display: flex;
-    width: 100%
+    margin: 0;
 }
 
 #container #sketch {
     width: 75%;
     float: left;
+    margin: 0;
 }
 
 #container #info {
-    width: 21%;
+    width: 25%;
     float: left;
-    padding: 2%;
+    margin: 2%;
     text-align: justify;
     font-size: min(1.7vh, 1vw);
 }
